# graph_imprinting

./: .gitignore  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
graph_configs/: standard_hidden.yaml
notebooks/: 2D_diffusion.ipynb  GNNs.ipynb  anemoi_graphs.ipynb  simple_test.ipynb
